@@ -54,6 +54,11 @@
 #define TWITTER_PREF_LIST_MAX_TWEETS "list_max_tweets"
 #define TWITTER_PREF_LIST_MAX_TWEETS_DEFAULT 100
 
+#define TWITTER_PREF_TIMELINE_TIMEOUT "refresh_timeline_minutes"
+#define TWITTER_PREF_TIMELINE_TIMEOUT_DEFAULT 1
+#define TWITTER_PREF_LIST_TIMEOUT "refresh_list_minutes"
+#define TWITTER_PREF_LIST_TIMEOUT_DEFAULT 10
+
 #define TWITTER_PREF_REPLIES_TIMEOUT "refresh_replies_minutes"
 #define	TWITTER_PREF_REPLIES_TIMEOUT_DEFAULT 30
 
